Prepare for Render deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-numpy
-pillow
-opencv-python==4.11.0.86
-tensorflow==2.19.0
-sounddevice==0.5.1
-jax==0.5.0
-jaxlib==0.5.0
-mediapipe==0.10.21
-matplotlib
-flask
+flask==3.0.0
+numpy==1.24.3
+pillow==10.0.1
+opencv-python-headless==4.8.1.78
+tensorflow==2.15.0
+gunicorn==21.2.0
 
